Closed Bug 599558 Opened 14 years ago Closed 14 years ago

Button elements should not have :optional applying to them

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7

People

(Reporter: mounir, Assigned: Ms2ger)

References

()

Details

(Whiteboard: [good first bug])

Attachments

(1 file, 1 obsolete file)

I was going to open this bug anyway but the specifications have just changed :)
Assignee: nobody → Ms2ger
I want to have that fixed for beta8 so let me know if you think you can't have it fixed for beta8, I will take the bug.
Attachment #481557 - Flags: review?(jonas)
Comment on attachment 481557 [details] [diff] [review]
Remove support for the :optional pseudo-class on button.

>diff --git a/layout/reftests/css-optional/css-optional-button.html b/layout/reftests/css-optional/css-optional-button.html
>--- a/layout/reftests/css-optional/css-optional-button.html
>+++ b/layout/reftests/css-optional/css-optional-button.html
>@@ -1,7 +1,11 @@
> <!DOCTYPE html>
> <html>
>-  <link rel='stylesheet' type='text/css' href='css-optional-style.css'>
>+  <style>
>+    :optional {
>+      visibility: hidden;
>+    }
>+  </style>
>   <body>
>     <button></button>
>   </body>
> </html>
>diff --git a/layout/reftests/css-optional/css-optional-style.css b/layout/reftests/css-optional/css-optional-style.css
>--- a/layout/reftests/css-optional/css-optional-style.css
>+++ b/layout/reftests/css-optional/css-optional-style.css
>@@ -1,8 +1,8 @@
>-input, textarea, select, button,
>+input, textarea, select,
> *:required {
>   visibility: hidden;
> }
> 
> *:optional {
>   visibility: visible;
> }

I would have changed the stylesheet to have button always hidden and make them visible if optional so reftest.list can compare the button file with about:blank (we save some bits). As is, the patch would be fine if, at least, you move the CSS rule from the html file to the CSS one.
Attachment #481557 - Flags: feedback+
Comment on attachment 481557 [details] [diff] [review]
Remove support for the :optional pseudo-class on button.

r=me with Mounir's requested changes.
Attachment #481557 - Flags: review?(jonas) → review+
Attachment #481557 - Attachment is obsolete: true
Comment on attachment 481638 [details] [diff] [review]
Remove support for the :optional pseudo-class on button (for checkin)

Jonas, I claimed a=you. Could you confirm?
Attachment #481638 - Attachment description: Remove support for the :optional pseudo-class on button; f=volkmar r+ → Remove support for the :optional pseudo-class on button (for checkin)
Attachment #481638 - Flags: approval2.0?
Whiteboard: [good first bug] → [good first bug][can land]
Pushed:
http://hg.mozilla.org/mozilla-central/rev/5ad6ebfbed1b
Status: NEW → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [good first bug][can land] → [good first bug]
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: