Bug 599558 - Remove support for the :optional pseudo-class on button; f=volkmar r+a=sicking